Custom--app/main/default/objects/Region__c/Region__c.object-meta.xml
<CustomObject>
    <description>Captures the records for regions.  Some of the values are used in one or more Triggers that auto-populate fields on Prospect and/or Pipeline and/or Portfolio records.</description>
    <label>Region</label>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>