Custom--app/main/default/objects/Region__c/fields/Acquired_Homes_with_New_Leases__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Homes_with_New_Leases__c</fullName>
    <defaultValue>0.880</defaultValue>
    <label>% Acquired Homes with New Leases</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>