Custom--app/main/default/objects/Region__c/fields/Acquired_Lease_Fee_in__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Lease_Fee_in__c</fullName>
    <defaultValue>125</defaultValue>
    <label>Acquired Lease Fee (in $)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>