Custom--app/main/default/objects/Region__c/fields/Acquisition_Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Team_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Region's acquisition team manager</description>
    <label>Acquisition Team Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Invitation Acquisition Analysis</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Invitation Acquisition Analysis Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>IH - Director of Acquisitions</value>
        </filterItems>
        <filterItems>
            <field>$User.Username</field>
            <operation>equals</operation>
            <value>sfadmin@invitationhomes.com</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>IH - Director of Acquisitions(App Track 2.0)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RegionAcquisitionTeamManagers</relationshipName>
    <type>Lookup</type>
</CustomField>