Custom--app/main/default/objects/Region__c/fields/Active_Claims_per_Broker__c.field-meta.xml
<CustomField>
    <fullName>Active_Claims_per_Broker__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Number of active claims per broker</description>
    <label>Active Claims per Broker</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>