Custom--app/main/default/objects/Region__c/fields/Additional_Fund_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fund_Prefix__c</fullName>
    <label>Additional Fund Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>