Custom--app/main/default/objects/Region__c/fields/Bookkeeper__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bookkeeper</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RegionsBookkeepers</relationshipName>
    <type>Lookup</type>
</CustomField>