Custom--app/main/default/objects/Region__c/fields/Call_Center_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Business_Hours__c</fullName>
    <label>Call Center Business Hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Center CST</fullName>
            </value>
            <value>
                <fullName>Call Center EST</fullName>
            </value>
            <value>
                <fullName>Call Center MST</fullName>
            </value>
            <value>
                <fullName>Call Center PST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>