Custom--app/main/default/objects/Region__c/fields/Claim_Expiration_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Claim_Expiration_Threshold__c</fullName>
    <defaultValue>24</defaultValue>
    <description>Claims expiration to be configured by Market</description>
    <label>Claim Expiration Threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>