Custom--app/main/default/objects/Region__c/fields/Closing_Manager_IMG__c.field-meta.xml
<CustomField>
    <fullName>Closing_Manager_IMG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Manager IMG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Regions6</relationshipName>
    <type>Lookup</type>
</CustomField>