Custom--app/main/default/objects/Region__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>