Custom--app/main/default/objects/Region__c/fields/Default_Title_Company__c.field-meta.xml
<CustomField>
    <fullName>Default_Title_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>D-00016192 :- The company linked to this field will be by default   Title Company for This region new BrokerSite Prospect</description>
    <label>Default Title Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regions (Default Title Company)</relationshipLabel>
    <relationshipName>Regions</relationshipName>
    <type>Lookup</type>
</CustomField>