Custom--app/main/default/objects/Region__c/fields/Direct_SSA_Per_Home__c.field-meta.xml
<CustomField>
    <fullName>Direct_SSA_Per_Home__c</fullName>
    <label>Direct SSA Per Home</label>
    <precision>16</precision>
    <scale>10</scale>
    <type>Currency</type>
</CustomField>