Custom--app/main/default/objects/Region__c/fields/Document_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Document_Coordinator__c</fullName>
    <description>An email is sent to this recipient when a document cannot be uploaded to StructuredFN</description>
    <label>Document Coordinator</label>
    <type>Email</type>
</CustomField>