Custom--app/main/default/objects/Region__c/fields/Fund_2__c.field-meta.xml
<CustomField>
    <fullName>Fund_2__c</fullName>
    <label>Fund 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>