Custom--app/main/default/objects/Region__c/fields/Fund_3__c.field-meta.xml
<CustomField>
    <fullName>Fund_3__c</fullName>
    <label>Fund 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>