Custom--app/main/default/objects/Region__c/fields/IMG_Director__c.field-meta.xml
<CustomField>
    <fullName>IMG_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMG Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Regions2</relationshipName>
    <type>Lookup</type>
</CustomField>