Custom--app/main/default/objects/Region__c/fields/Insurance_Per_Home__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Per_Home__c</fullName>
    <label>Insurance Per Home</label>
    <precision>15</precision>
    <scale>10</scale>
    <type>Currency</type>
</CustomField>