Custom--app/main/default/objects/Region__c/fields/Is_Entera_market__c.field-meta.xml
<CustomField>
    <fullName>Is_Entera_market__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Entera market?</label>
    <type>Checkbox</type>
</CustomField>