Custom--app/main/default/objects/Region__c/fields/M1_Expense_Margin_Fund2__c.field-meta.xml
<CustomField>
    <fullName>M1_Expense_Margin_Fund2__c</fullName>
    <label>M1 Expense Margin Fund 2</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>