Custom--app/main/default/objects/Region__c/fields/New_Lease_Fee_in_Months__c.field-meta.xml
<CustomField>
    <fullName>New_Lease_Fee_in_Months__c</fullName>
    <defaultValue>0.50</defaultValue>
    <label>New Lease Fee (in Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>