Custom--app/main/default/objects/Region__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <description>Occupancy based on market</description>
    <label>Occupancy</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>