Custom--app/main/default/objects/Region__c/fields/OI_Conc_BD_as_of_RI__c.field-meta.xml
<CustomField>
    <fullName>OI_Conc_BD_as_of_RI__c</fullName>
    <label>OI/Conc/BD as % of RI</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Percent</type>
</CustomField>