Custom--app/main/default/objects/Region__c/fields/Owner_Entity__c.field-meta.xml
<CustomField>
    <fullName>Owner_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field has been essentially replaced with a formula field on Portfolio.  This value is populated on new Prospect and Pipeline records, but the field does not appear on the layouts, indicating no one is using it until it gets to Portfolio.  Technically these values should be Fund 4 values.</description>
    <inlineHelpText>This field has been essentially replaced with a formula field on Portfolio.  This value is populated on new Prospect and Pipeline records, but the field does not appear on the layouts, indicating no one is using it until it gets to Portfolio.</inlineHelpText>
    <label>Owner Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Regions (Owner Entity)</relationshipLabel>
    <relationshipName>RegionsOwnerEntities</relationshipName>
    <type>Lookup</type>
</CustomField>