Custom--app/main/default/objects/Region__c/fields/Pool_Exp_Per_Home__c.field-meta.xml
<CustomField>
    <fullName>Pool_Exp_Per_Home__c</fullName>
    <label>Pool Exp Per Home</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>