Custom--app/main/default/objects/Region__c/fields/Property_Code_Base__c.field-meta.xml
<CustomField>
    <fullName>Property_Code_Base__c</fullName>
    <label>Property Code Base</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>