Custom--app/main/default/objects/Region__c/fields/Prospect_Occupied_Status_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Occupied_Status_Acquisition__c</fullName>
    <description>D-00016192 :- This will be default value for New Broker Site Prospect :Occupied Status @ Acquisition</description>
    <label>Prospect: Occupied Status @ Acquisition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>