Custom--app/main/default/objects/Region__c/fields/Purchasing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Entity__c</fullName>
    <label>Purchasing Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>