Custom--app/main/default/objects/Region__c/fields/Rehab_Team_Manager__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Team_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rehab Team Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RegionsRehabTeamManagers</relationshipName>
    <type>Lookup</type>
</CustomField>