Custom--app/main/default/objects/Region__c/fields/SqFt_Median__c.field-meta.xml
<CustomField>
    <fullName>SqFt_Median__c</fullName>
    <label>SqFt Median</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>