Custom--app/main/default/objects/Region__c/fields/SqFt_Standard_deviation__c.field-meta.xml
<CustomField>
    <fullName>SqFt_Standard_deviation__c</fullName>
    <label>SqFt Standard deviation</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>