Custom--app/main/default/objects/Region__c/fields/SVP_IMG__c.field-meta.xml
<CustomField>
    <fullName>SVP_IMG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVP IMG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Regions3</relationshipName>
    <type>Lookup</type>
</CustomField>