Custom--app/main/default/objects/Region__c/fields/TIP_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>TIP_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TIP Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RegionsTipCoordinators</relationshipName>
    <type>Lookup</type>
</CustomField>