Custom--app/main/default/objects/Region__c/fields/Transaction_Manager__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Regions4</relationshipName>
    <type>Lookup</type>
</CustomField>