Custom--app/main/default/objects/Region__c/fields/Trustee_Acqs_Point_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Acqs_Point_of_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IH Trustee Acquisitions default point of contact for the region</description>
    <label>Trustee Acquisitions Point of Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RegionsTrusteeAcqsPointOfContact</relationshipName>
    <type>Lookup</type>
</CustomField>