Custom--app/main/default/objects/Region__c/fields/Yardi_InvestorCode_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Yardi_InvestorCode_Prefix__c</fullName>
    <description>Field to hold the investor code value for the region will be useful in generating new IACommitments csv file for Yardi.</description>
    <label>Yardi InvestorCode Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>