Custom--app/main/default/objects/Region__c/validationRules/VR_ValidateBeforeEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ValidateBeforeEdit</fullName>
    <active>true</active>
    <description>This rule prevents users from editing the Region record associated with a region other than the region the user is associated with.</description>
    <errorConditionFormula>AND ( 
NOT(ISNEW()), 
TEXT($User.Region__c) != Name, 
$Profile.Name != 'Invitation Corporate Wide Executive', 
$Profile.Name != 'System Administrator' 
)</errorConditionFormula>
    <errorMessage>You may only edit Region info from your own Region.</errorMessage>
</ValidationRule>