Custom--app/main/default/objects/Region__c/listViews/Default_Values.listView-meta.xml
<ListView>
    <fullName>Default_Values</fullName>
    <columns>NAME</columns>
    <columns>Acquired_Homes_with_New_Leases__c</columns>
    <columns>Acquired_Lease_Fee_in__c</columns>
    <columns>D_3rd_Party_DK__c</columns>
    <columns>New_Lease_Fee_in_Months__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default Values</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>